fixed navbar overflow problem

--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -113,6 +113,8 @@
     z-index: 1;
     border: #282e35;
     box-shadow: 0px 0px 10px 0px #282e35;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     display: none;
   }
   
@@ -121,14 +123,19 @@
     width: 100%;
     line-height: 51px;
     text-align: center;
-    border-bottom: 1px solid #282e35;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding-left: 10px;
+    padding-right: 10px;
   }
   
   #gameSearchResults a {
     margin: 0;
     display: block;
     width: 100%;
-    height: 100%;
+    height: 51px;
+    border-bottom: 1px solid #282e35;
   }
   
   /* #gameSearchResults a:hover {
